--- a/stylesheets/less/index.less
+++ b/stylesheets/less/index.less
@@ -26,11 +26,9 @@
 	#content_primary, #content_secondary, #content_tertiary {
 		margin-bottom:@row-height*2;
 		.post {
-			.more {
-				display:inline-block; text-decoration:none; background:@color_light; padding:0 4px 3px 4px; color:@color_off_black; border-radius:2px;
+			.read-more {
 				margin-top:@row-height;
 			}
-			.more:hover { background:@color_midtone; color:@color_highlight; }
 		}
 	}
 	
