--- a/stylesheets/less/header.less
+++ b/stylesheets/less/header.less
@@ -33,6 +33,8 @@
 				position:absolute;
 				top:2px;
 				left:4px;
+				font-style:normal;
+				font-weight:normal;
 			}
 			.label {
 				display:none;
