--- a/stylesheets/css/srd.css
+++ b/stylesheets/css/srd.css
@@ -386,6 +386,9 @@
 #page_footer .widget ul li {
   margin-left: 0;
 }
+#page_footer a {
+  text-decoration: none;
+}
 #page_footer #footer_main_promo {
   width: 330px;
   height: 180px;
