--- a/stylesheets/less/fourohfour.less
+++ b/stylesheets/less/fourohfour.less
@@ -2,8 +2,25 @@
 
 #content.fourohfour {
 	h1 {
-	
+		
 	}
+	
+	h2 {
+		margin-top:0;
+	}
+	
+	.container  {
+		p.default-message {
+			font-family:@serif;
+			font-size:19px;
+			line-height:30px;
+		}
+		#s {
+			.columns(5);
+			font-size:14px;
+		}
+	}
+	
 	.widget {
 		float:left;
 		margin-right:20px;
