--- a/stylesheets/less/index.less
+++ b/stylesheets/less/index.less
@@ -29,6 +29,10 @@
 			margin-bottom:@row-height;
 			.read-more {
 				margin-top:@row-height;
+				.more {
+					font-size:9px;
+					padding:1px 4px;
+				}
 			}
 		}
 		.post:nth-child(4n+1) {
