--- a/stylesheets/less/srd.less
+++ b/stylesheets/less/srd.less
@@ -436,6 +436,15 @@
 			}
 		}
 	}
+	
+	/*suggestion-box*/
+	#text-23 {
+		p {
+			font-size:22px;
+			line-height:30px;
+			font-style:italic;
+		}
+	}
 
 	#footer_main_promo {
 		width:330px;
