Major cleanup to srd.js, cleanups of the CSS and extra transition love.

--- a/stylesheets/css/colorbox.css
+++ b/stylesheets/css/colorbox.css
@@ -1,124 +1,20 @@
-.reset-dimensions {
-  margin: 0;
-  padding: 0;
-}
-.incomplete {
-  background-color: rgba(255, 0, 255, 0);
-}
-.show-bounds {
-  background-color: rgba(255, 255, 0, 0.5);
-}
-/*
-    ColorBox Core Style
-    The following rules are the styles that are consistant between themes.
-    Avoid changing this area to maintain compatability with future versions of ColorBox.
-*/
-#colorbox, #cboxOverlay, #cboxWrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 9999;
-  overflow: hidden;
-}
-#cboxOverlay {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-}
-#cboxMiddleLeft, #cboxBottomLeft {
-  clear: left;
-}
-#cboxContent {
-  position: relative;
-  overflow: hidden;
-  padding: 1px;
-  background: #fefafa;
-  padding-bottom: 5px;
-}
-#cboxLoadedContent {
-  overflow: auto;
-}
-#cboxLoadedContent iframe {
-  display: block;
-  width: 100%;
-  height: 100%;
-  border: 0;
-}
-#cboxTitle {
-  margin: 0;
-}
-#cboxLoadingOverlay, #cboxLoadingGraphic {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-#cboxPrevious,
-#cboxNext,
-#cboxClose,
-#cboxSlideshow {
-  cursor: pointer;
-}
-/* 
-    Example user style
-    The following rules are ordered and tabbed in a way that represents the
-    order/nesting of the generated HTML, so that the structure easier to understand.
-*/
-#cboxOverlay {
-  background-color: rgba(42, 32, 30, 0.75);
-}
-#cboxLoadedContent {
-  margin-bottom: 28px;
-}
-#cboxTitle {
-  position: absolute;
-  bottom: 3px;
-  left: 0;
-  text-align: center;
-  width: 100%;
-  color: #5d504f;
-}
-#cboxCurrent {
-  position: absolute;
-  bottom: 3px;
-  left: 58px;
-  color: #5d504f;
-}
-#cboxSlideshow {
-  position: absolute;
-  bottom: 3px;
-  right: 30px;
-  color: #5d504f;
-}
-#cboxPrevious {
-  position: absolute;
-  bottom: 5px;
-  left: 5px;
-  background: url(../../images/fs_sprite.png) -200px -150px no-repeat;
-  width: 20px;
-  height: 20px;
-  text-indent: -9999px;
-  border-right: 1px solid #5d504f;
-  border-bottom: 1px solid #5d504f;
-}
-#cboxNext {
-  position: absolute;
-  bottom: 5px;
-  left: 30px;
-  background: url(../../images/fs_sprite.png) -180px -150px no-repeat;
-  width: 20px;
-  height: 20px;
-  text-indent: -9999px;
-}
-/*#cboxLoadingGraphic{background:url(images/loading.gif) center center no-repeat;}*/
-#cboxClose {
-  position: absolute;
-  bottom: 5px;
-  right: 5px;
-  background: url(../../images/fs_sprite.png) -215px -145px no-repeat;
-  width: 20px;
-  height: 20px;
-  text-indent: -9999px;
-  border-right: 1px solid #5d504f;
-  border-bottom: 1px solid #5d504f;
-}
+.reset-dimensions{margin:0;padding:0;}
+.incomplete{background-color:rgba(255, 0, 255, 0);}
+.show-bounds{background-color:rgba(255, 255, 0, 0.5);}
+#colorbox,#cboxOverlay,#cboxWrapper{position:absolute;top:0;left:0;z-index:9999;overflow:hidden;}
+#cboxOverlay{position:fixed;width:100%;height:100%;}
+#cboxMiddleLeft,#cboxBottomLeft{clear:left;}
+#cboxContent{position:relative;overflow:hidden;padding:1px;background:#fefafa;padding-bottom:5px;}
+#cboxLoadedContent{overflow:auto;}
+#cboxLoadedContent iframe{display:block;width:100%;height:100%;border:0;}
+#cboxTitle{margin:0;}
+#cboxLoadingOverlay,#cboxLoadingGraphic{position:absolute;top:0;left:0;width:100%;}
+#cboxPrevious,#cboxNext,#cboxClose,#cboxSlideshow{cursor:pointer;}
+#cboxOverlay{background-color:rgba(42, 32, 30, 0.75);}
+#cboxLoadedContent{margin-bottom:28px;}
+#cboxTitle{position:absolute;bottom:3px;left:0;text-align:center;width:100%;color:#5d504f;}
+#cboxCurrent{position:absolute;bottom:3px;left:58px;color:#5d504f;}
+#cboxSlideshow{position:absolute;bottom:3px;right:30px;color:#5d504f;}
+#cboxPrevious{position:absolute;bottom:5px;left:5px;background:url(../../images/fs_sprite.png) -200px -150px no-repeat;width:20px;height:20px;text-indent:-9999px;border-right:1px solid #5d504f;border-bottom:1px solid #5d504f;}
+#cboxNext{position:absolute;bottom:5px;left:30px;background:url(../../images/fs_sprite.png) -180px -150px no-repeat;width:20px;height:20px;text-indent:-9999px;}
+#cboxClose{position:absolute;bottom:5px;right:5px;background:url(../../images/fs_sprite.png) -215px -145px no-repeat;width:20px;height:20px;text-indent:-9999px;border-right:1px solid #5d504f;border-bottom:1px solid #5d504f;}
