--- a/stylesheets/css/images.css
+++ b/stylesheets/css/images.css
@@ -1,14 +1,4 @@
-.reset-dimensions {
-  margin: 0;
-  padding: 0;
-}
-.incomplete {
-  background-color: rgba(255, 0, 255, 0);
-}
-.show-bounds {
-  background-color: rgba(255, 255, 0, 0.5);
-}
-.gravatar img {
-  margin-top: 9px;
-  background: url(../../images/placeholder_50x50.gif) no-repeat;
-}
+.reset-dimensions{margin:0;padding:0;}
+.incomplete{background-color:rgba(255, 0, 255, 0);}
+.show-bounds{background-color:rgba(255, 255, 0, 0.5);}
+.gravatar img{margin-top:9px;background:url(../../images/placeholder_50x50.gif) no-repeat;}
