--- a/stylesheets/css/widgets.css
+++ b/stylesheets/css/widgets.css
@@ -1,46 +1,10 @@
-.reset-dimensions {
-  margin: 0;
-  padding: 0;
-}
-.incomplete {
-  background-color: rgba(255, 0, 255, 0);
-}
-.show-bounds {
-  background-color: rgba(255, 255, 0, 0.5);
-}
-/*Sub-header intro text*/
-#sub_header #text-3 p {
-  font-size: 12px;
-  line-height: 15px;
-}
-/*Page heel navigation*/
-#page_heel #nav_menu-3 ul {
-  list-style: none;
-  margin-left: 0;
-}
-#page_heel #nav_menu-3 ul li {
-  float: left;
-  margin-right: 15px;
-}
-#wp-calendar {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-#wp-calendar th, #wp-calendar td {
-  padding: 0 8px;
-}
-#wp-calendar th:first-child, #wp-calendar td:first-child {
-  padding-left: 0;
-}
-#wp-calendar th.last, #wp-calendar td.last {
-  padding-right: 0;
-}
-#wp-calendar caption {
-  font-style: italic;
-  font-size: 11px;
-  padding: 0;
-  padding-top: 1px;
-}
-#wp-calendar #today {
-  font-weight: bold;
-}
+.reset-dimensions{margin:0;padding:0;}
+.incomplete{background-color:rgba(255, 0, 255, 0);}
+.show-bounds{background-color:rgba(255, 255, 0, 0.5);}
+#sub_header #text-3 p{font-size:12px;line-height:15px;}
+#page_heel #nav_menu-3 ul{list-style:none;margin-left:0;}#page_heel #nav_menu-3 ul li{float:left;margin-right:15px;}
+#wp-calendar{margin-top:0;margin-bottom:0;}#wp-calendar th,#wp-calendar td{padding:0 8px;}
+#wp-calendar th:first-child,#wp-calendar td:first-child{padding-left:0;}
+#wp-calendar th.last,#wp-calendar td.last{padding-right:0;}
+#wp-calendar caption{font-style:italic;font-size:11px;padding:0;padding-top:1px;}
+#wp-calendar #today{font-weight:bold;}
