--- a/stylesheets/less/transitions.less
+++ b/stylesheets/less/transitions.less
@@ -15,8 +15,13 @@
 	-webkit-transition-duration: .5s;
 	-webkit-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
 
-	-moz-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-o-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition-property: width, border-left, opacity;
+	-moz-transition-duration: .5s;
+	-moz-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
+	
+	-o-transition-property: width, border-left, opacity;
+	-o-transition-duration: .5s;
+	-o-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
 }
 
 #sticky_footer {
@@ -36,16 +41,26 @@
 }
 
 #categories_pullout {
-	-webkit-transition-property: height;
-	-webkit-transition-duration: .3s;
-	-webkit-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
+	-webkit-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-o-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0);
 }
 
-/*
+
 a{
-	-webkit-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-webkit-transition-property: background, color;
+	-webkit-transition-duration: .5s;
+	-webkit-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
+	
+	-moz-transition-property: background, color;
+	-moz-transition-duration: .5s;
+	-moz-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
+	
+	-o-transition-property: background, color;
+	-o-transition-duration: .5s;
+	-o-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
 }
-*/
+
 
 #search_form {
 	-webkit-transition: all .2s cubic-bezier(0.02, 0, 0.18, 1.0); 
