--- a/stylesheets/css/sprites.css
+++ b/stylesheets/css/sprites.css
@@ -8,6 +8,7 @@
 .sprite.facebook{width:14px;height:30px;background-image:url(../../images/fs_sprite.png);background-position:-150px -200px;background-repeat:no-repeat;}
 .sprite.flickr{width:30px;height:15px;background-image:url(../../images/fs_sprite.png);background-position:-190px -200px;background-repeat:no-repeat;}
 .sprite.git{width:28px;height:30px;background-image:url(../../images/fs_sprite.png);background-position:-240px -200px;background-repeat:no-repeat;}
+.sprite.friendfeed{width:28px;height:30px;background-image:url(../../images/fs_sprite.png);background-position:-340px -200px;background-repeat:no-repeat;}
 .sprite.vimeo-light-50{width:50px;height:43px;background-image:url(../../images/fs_sprite.png);background-position:0px -30px;background-repeat:no-repeat;}
 .sprite.twitter-light-50{width:37px;height:50px;background-image:url(../../images/fs_sprite.png);background-position:-70px -30px;background-repeat:no-repeat;}
 .sprite.tumblr-light-50{width:31px;height:50px;background-image:url(../../images/fs_sprite.png);background-position:-130px -30px;background-repeat:no-repeat;}
