--- a/stylesheets/css/srd.css
+++ b/stylesheets/css/srd.css
@@ -66,6 +66,7 @@
 #page_footer #footer_follow_list li a .facebook{margin-left:-7px;margin-top:-15px;}
 #page_footer #footer_follow_list li a .flickr{margin-left:-15px;margin-top:-7px;}
 #page_footer #footer_follow_list li a .git{margin-left:-14px;margin-top:-15px;}
+#page_footer #footer_follow_list li a .friendfeed{margin-left:-14px;margin-top:-15px;}
 #page_footer #footer_follow_list li:nth-child(3n){margin-right:0;}
 #page_footer #footer_follow_list li:nth-child(4){margin-bottom:0;}
 #page_footer .widget ul{list-style:decimal;}
