--- a/stylesheets/less/global.less
+++ b/stylesheets/less/global.less
@@ -276,6 +276,7 @@ hr {
 		padding:4px 8px;
 		.drop-shadow(1px, 1px, 0px, @color_dark);
 		text-decoration:none;
+		word-spacing:0;
 	}
 	a:hover { 
 		background:@color_midtone; 
