--- a/stylesheets/less/sprites.less
+++ b/stylesheets/less/sprites.less
@@ -33,6 +33,11 @@
 	height:30px;
 	.sprite-background(-240px, -200px);
 }
+.sprite.friendfeed {
+	width:28px;
+	height:30px;
+	.sprite-background(-340px, -200px);
+}
 
 .sprite.vimeo-light-50 {
 	width:50px;
