--- a/stylesheets/less/srd.less
+++ b/stylesheets/less/srd.less
@@ -576,6 +576,10 @@
 					margin-left:-14px;
 					margin-top:-15px;
 				}
+				.friendfeed {
+					margin-left:-14px;
+					margin-top:-15px;
+				}
 			}
 		}
 
