--- a/stylesheets/less/footer.less
+++ b/stylesheets/less/footer.less
@@ -115,8 +115,7 @@
 	}
 }
 
-#sticky_footer.light
-{
+#sticky_footer.light {
 	background-color: rgba(254,250,250,.75);
 	.widget {
 		color:@color_off_black;
