--- a/stylesheets/less/transitions.less
+++ b/stylesheets/less/transitions.less
@@ -61,6 +61,11 @@ a{
 	-o-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
 }
 
+#content.home .post footer .metadata {
+	-webkit-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-o-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0);
+}
 
 #search_form {
 	-webkit-transition: all .2s cubic-bezier(0.02, 0, 0.18, 1.0); 
